--- a/action.yml
+++ b/action.yml
@@ -5,13 +5,19 @@ branding:
   icon: 'upload-cloud'
   color: 'blue'
 inputs:
+  php_version:
+    description: 'PHP version to use'
+    required: false
+    default: '7.1'
   generate_zip:
     required: false
     description: 'Generate package zip file?'
+  zip_name:
+    required: false
+    description: 'Name of the zip file?'
   wp_deploy:
     required: false
     description: 'Should we deploy to WP?'
-    default: false
   wp_url:
     required: false
     description: 'WP URL'
@@ -37,9 +43,6 @@ inputs:
     description: 'Assets directory'
     default: '.wordpress-org'
 outputs:
-  path:
-    description: 'Build path'
-    value: ${{ steps.deploy.outputs.path }}
   zip_path:
     description: 'Zip file path'
     value: ${{ steps.deploy.outputs.zip_path }}
@@ -49,27 +52,31 @@ runs:
     - name: Setup Environment
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '7.4'
+        php-version: ${{ inputs.php_version }}
         coverage: none
         tools: composer
+
     - name: Tool versions
       shell: bash
       run: |
         php --version
         composer --version
         node --version
+
     - id: deploy
+      run: ${{ github.action_path }}/run.sh
       env:
         GENERATE_ZIP: ${{ inputs.generate_zip }}
         ZIP_NAME: ${{ inputs.zip_name }}
         WP_DEPLOY: ${{ inputs.wp_deploy }}
-        WP_URL: ${{ inputs.wp_url }}
+        DRY_RUN: ${{ inputs.dry_run }}
         WP_SLUG: ${{ inputs.wp_slug }}
         WP_USERNAME: ${{ inputs.wp_username }}
         WP_PASSWORD: ${{ inputs.wp_password }}
-        DRY_RUN: ${{ inputs.dry_run }}
         VERSION: ${{ inputs.version }}
         ASSETS_DIR: ${{ inputs.assets_dir }}
-      run: ${{ github.action_path }}/run.sh
+      shell: bash
+
+    - run: env
       shell: bash
 
